[package]
# Package Meta
name = "dagger_macros"
version = "0.1.0"
description = "Macros for dagger."
keywords = [ "ui", "graphics", "macro", "proc-macro", "dagger" ]
readme = "README.md"
license = "GPL-3.0-or-later"

# Rust Meta
edition = "2021"

# Author Meta
authors = [ "Thomas Reddy <contact@thomasreddy.com>" ]
repository = "https://github.com/standard-abstractions/dagger_macros"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"